# framecraft-ai

./: .gitignore  README.MD  pyproject.toml
configs/: sources.yaml  sources_quick.yaml  train.yaml
data/: README.md
scripts/: baseline_eval.py  baseline_interpolate.py  bootstrap_env.py  compare_runs.py  dataset_qa.py  download_sources.py  eval.py  extract_frames.py  infer.py  interpolate_video.py  plot_training.py  prepare_data.py  refresh_sources.py  register_run.py  report_eval.py  train.py
src/denoise_interpolate/: __init__.py  baselines.py  registry.py  utils.py
src/denoise_interpolate/data/: __init__.py  frame_dataset.py  transforms.py
src/denoise_interpolate/models/: __init__.py  factory.py  residual.py  unet.py  vit.py
